--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,20 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script>
+      $(document).ready(function() {
+         $('a[href^="#"]').click(function () { 
+           elementClick = $(this).attr("href");
+           destination = $(elementClick).offset().top;
+           if($.support .safari){
+             $('body').animate( { scrollTop: destination }, 1100 );
+           }else{
+             $('html').animate( { scrollTop: destination }, 1100 );
+           }
+           return false;
+         });
+       });
+      </script>
   </body>
 </html>
